implementing subscription order form

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,5 +1,6 @@
 {
   "aboutFarm": "O Farmě",
+  "subscriptionsTable.quantityHeading": "Počet odběrů",
   "accommodation.heading": "Ubytování",
   "address": "Adresa",
   "addressLevel1Label": "Okres", 
