--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,5 +1,6 @@
 {
   "aboutFarm": "About Farm",
+  "subscriptionsTable.quantityHeading": "Quantity",
   "accommodation.heading": "Accommodation",
   "address": "Address",
   "addressLevel1Label": "State / Province / District", 
