--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,6 +1,6 @@
 {
   "aboutFarm": "About Farm",
-  "subscriptionsTable.quantityHeading": "Quantity",
+  "subscriptionsTable.numberOfDeliveriesHeading": "Quantity",
   "subscriptionsTable.priceHeading": "Price",
   "accommodation.heading": "Accommodation",
   "address": "Address",
