implementing subscriptions page

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,4 +1,7 @@
 {
+  "howItWorks?": "Jak to funguje?",
+  "subscriptionsPage.selectPickupPointHeading": "Vyber odběrové místo",
+  "subscriptionsPage.selectSubscriptionHeading": "Vyber předplatné",
   "aboutFarm": "O Farmě",
   "subscriptionsTable.priceHeading": "Price",
   "subscriptionsTable.numberOfDeliveriesHeading": "Počet odběrů",
@@ -35,7 +38,7 @@
   "landingPage.contactDeveloper": "Nebo kontaktuje vývojáře",
   "landingPage.heading": "Lokální produkty přímo z farmy",
   "landingPage.howItWorks1": "Najdi farmu dle odběrového místa",
-  "landingPage.howItWorks2": "Vyber produkty k odběru",
+  "landingPage.howItWorks2": "Vyber předplatné",
   "landingPage.howItWorks3": "Čím více předplatíš tím více ušetříš",
   "landingPage.howItWorks4": "Pravidelně vyzvedávej své odběry",
   "landingPage.subscribeToNewsletter": "Přidej se",
@@ -52,7 +55,7 @@
   "photoGallery.heading": "Fotogalerie",
   "pickupDayLabel": "Odběrový den",
   "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin.",
-  "pickupPointEditor.heading": "Odběrové místo",
+  "pickupPoint": "Odběrové místo",
   "pickupPoints": "Odběrová Místa",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
   "postcode": "PSČ",
