--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "howItWorks?": "How it works?",
+  "subscriptionsPage.selectPickupPointHeading": "Select pickup point",
+  "subscriptionsPage.selectSubscriptionHeading": "Select subscriptions",
   "aboutFarm": "About Farm",
   "subscriptionsTable.numberOfDeliveriesHeading": "Quantity",
   "subscriptionsTable.priceHeading": "Price",
@@ -35,7 +38,7 @@
   "landingPage.contactDeveloper": "Or contact the developer",
   "landingPage.heading": "Local produce directly from a farm",
   "landingPage.howItWorks1": "Find farm by pickup point",
-  "landingPage.howItWorks2": "Select farm produce subscription",
+  "landingPage.howItWorks2": "Select subscription",
   "landingPage.howItWorks3": "The more you prepay the more you save",
   "landingPage.howItWorks4": "Pick up regular deliveries",
   "landingPage.subscribeToNewsletter": "Subscribe",
@@ -52,7 +55,7 @@
   "photoGallery.heading": "Photo Gallery",
   "pickupDayLabel": "Pickup day",
   "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm.",
-  "pickupPointEditor.heading": "Pickup Point",
+  "pickupPoint": "Pickup point",
   "pickupPoints": "Pickup Points",
   "pickupPointsPage.editDelete": "Edit/Delete",
   "postcode": "Postcode",
