add subscription order note field

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -91,6 +91,10 @@
   "subscriptionsPage.howItWorks3": "Zaplať objednávku",
   "subscriptionsPage.howItWorks4": "Vyčkej na email s prvním datem závozu",
   "subscriptionsPage.howItWorks5": "Pravidelně vyzvedávej",
+  "subscriptionsPage.noteHeading": "Poznámka (požadavky, zpětná vazba)",
+  "subscriptionsPage.note.placeholder.line1": "Frekvence odběru: jednou za 14 dní", 
+  "subscriptionsPage.note.placeholder.line2": "Oblíbená zelenina: paprika, rajče, mrkev, salát, okurka",
+  "subscriptionsPage.note.placeholder.line3": "Neoblíbená zelenina: kopr, cibule, brokolice",
   "subscriptionsPage.heading": "Předplatné",
   "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
   "subscriptionsPage.subscriptionName": "Jméno předplatného",
