--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -86,7 +86,7 @@
   "subscriptionEditor.namePlaceholder": "Velká zeleninová bedýnka",
   "subscriptionEditor.numberOfDeliveries": "Od počtu odběrů",
   "subscriptionEditor.pricePerDelivery": "Cena za odběr ({{currency}})",
-  "subscriptionsPage.howItWorks1": "Vytvoř objednávku",
+  "subscriptionsPage.howItWorks1": "Níže vytvoř objednávku",
   "subscriptionsPage.howItWorks2": "Vyčkej na email od farmáře s platebními údaji",
   "subscriptionsPage.howItWorks3": "Zaplať objednávku",
   "subscriptionsPage.howItWorks4": "Vyčkej na email s prvním datem závozu",
