--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "subscriptionsPage.customerData.heading": "Contact information",
+  "subscriptionsPage.submit.button": "Create order",
+  "fullname": "Fullname",
   "howItWorks?": "How it works?",
   "subscriptionsPage.selectPickupPointHeading": "Select pickup point",
   "subscriptionsPage.selectSubscriptionHeading": "Select subscriptions",
