implement order submit flow

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,4 +1,7 @@
 {
+  "ok": "Ok",
+  "subscriptionsPage.submit.success.text": "Objednávka byla úspěšně odeslána farmáři a na tvůj email.",
+  "subscriptionsPage.submit.success.nextSteps": "Další kroky:",
   "subscriptionsPage.submit.button": "Odeslat objednávku",
   "subscriptionsPage.customerData.heading": "Kontaktní údaje",
   "fullname": "Jméno a příjmení",
