implementing order view

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -55,6 +55,7 @@
   "name": "Jméno",
   "no": "Ne",
   "orders": "Objednávky",
+  "orderPage.heading": "Objednávka #{{orderId}}",
   "password": "Heslo",
   "pc": "ks",
   "phoneNumber": "Telefonní číslo",
