--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -1,4 +1,11 @@
 {
+  "order.status.label": "Stav",
+  "order.status.completed": "Vyřízena",
+  "order.status.active": "Aktivní",
+  "customer": "Zákazník",
+  "note": "Poznámka",
+  "dateOfCreation": "Datum vytvoření",
+  "orderId": "Id objednávky",
   "ok": "Ok",
   "subscriptionsPage.submit.success.text": "Objednávka byla úspěšně odeslána farmáři a na tvůj email.",
   "subscriptionsPage.submit.success.nextSteps": "Další kroky:",
@@ -31,7 +38,7 @@
   "farmForm.makeFarmPublic": "Zveřejnit farmu",
   "farmName": "Jméno farmy",
   "farmPages.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
-  "farmPages.switchToAdminMode": "Editovat",
+  "farmPages.switchToAdminMode": "Správa",
   "farmPages.switchToViewMode": "Náhled", 
   "farmPickupDayDefaultValue": "Dle domluvy",
   "farmsPage.deliversToHeading": "Odběrová místa v",
@@ -53,6 +60,7 @@
   "myFarm": "Moje Farma",
   "name": "Jméno",
   "no": "Ne",
+  "order": "Objednávka",
   "orders": "Objednávky",
   "orderPage.heading": "Objednávka #{{orderId}}",
   "password": "Heslo",
