--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,11 @@
 {
+  "order.status.label": "Status",
+  "order.status.completed": "Completed",
+  "order.status.active": "In progress",
+  "customer": "Customer",
+  "note": "Note",
+  "dateOfCreation": "Date of creation",
+  "orderId" : "Order id",
   "ok": "Ok",
   "subscriptionsPage.submit.success.text": "The order has been successfully sent to the farmer and to your email.",
   "subscriptionsPage.submit.success.nextSteps": "Next steps:",
@@ -31,7 +38,7 @@
   "farmForm.makeFarmPublic": "Make farm public",
   "farmName": "Farm name",
   "farmPages.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
-  "farmPages.switchToAdminMode": "Edit",
+  "farmPages.switchToAdminMode": "Admin",
   "farmPages.switchToViewMode": "View", 
   "farmPickupDayDefaultValue": "By agreement.",
   "farmsPage.deliversToHeading": "Pickup points in",
@@ -53,6 +60,7 @@
   "myFarm": "My Farm",
   "name": "Name",
   "no": "No",
+  "order": "Order",
   "orders": "Orders",
   "orderPage.heading": "Order #{{orderId}}",
   "password": "Password",
