--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -2,6 +2,7 @@
   "order.status.label": "Status",
   "order.status.completed": "Completed",
   "order.status.active": "In progress",
+  "subscriptionsTable.pricePerDelivery.heading": "Price per delivery",
   "customer": "Customer",
   "note": "Note",
   "dateOfCreation": "Date of creation",
@@ -106,7 +107,7 @@
   "subscriptionsPage.howItWorks3": "Pay for the order",
   "subscriptionsPage.howItWorks4": "Wait for an email with first delivery day",
   "subscriptionsPage.howItWorks5": "Pick up regular deliveries",
-  "subscriptionsPage.heading": "Subscriptions",
+  "subscription.subscriptions.heading": "Subscriptions",
   "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
   "subscriptionsPage.subscriptionName": "Subscription name",
   "subscriptionsTable.pricingHeading": "Pricing",
