--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,8 +1,13 @@
 {
+  "order.journal.heading": "Order journal",
   "order.status.label": "Status",
+  "order.sortByOrders.createdAt.label":  "Date",
+  "order.adminModeForm.completed.label" : "Order completed",
+  "order.sortByOrders.pickupPointName.label":  "Pickup point",
+  "sortBy": "Sort by",
   "order.status.completed": "Completed",
   "order.orders.completed.heading": "Completed",
-  "order.status.active": "In progress",
+  "order.status.active": "Active",
   "subscriptionsTable.pricePerDelivery.heading": "Price per delivery",
   "customer": "Customer",
   "note": "Note",
