--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -24,7 +24,7 @@
   "subscriptionsPage.selectSubscriptionHeading": "Vyber předplatné",
   "aboutFarm": "O Farmě",
   "subscriptionsTable.priceHeading": "Price",
-  "subscriptionsTable.numberOfDeliveriesHeading": "Počet odběrů",
+  "subscriptionsTable.numberOfDeliveriesHeading": "Počet odběrů (ks)",
   "accommodation.heading": "Ubytování",
   "address": "Adresa",
   "addressLevel1Label": "Okres", 
@@ -56,7 +56,7 @@
   "genericFailureMessage": "Něco se porouchalo. Zkuste opakovat akci později.",
   "landingPage.contactDeveloper": "Nebo kontaktuje vývojáře",
   "landingPage.heading": "Lokální produkty přímo z farmy",
-  "landingPage.howItWorks1": "Najdi farmu dle odběrového místa",
+  "landingPage.howItWorks1": "Najdi farmu",
   "landingPage.howItWorks2": "Vyber předplatné",
   "landingPage.howItWorks3": "Čím více předplatíš tím více ušetříš",
   "landingPage.howItWorks4": "Pravidelně vyzvedávej své odběry",
@@ -75,7 +75,7 @@
   "phoneNumber": "Telefonní číslo",
   "photoGallery.heading": "Fotogalerie",
   "pickupDayLabel": "Odběrový den",
-  "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin.",
+  "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Frekvenci uveďte v poznámce objednávky.",
   "pickupPoint": "Odběrové místo",
   "pickupPoints": "Odběrová Místa",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
@@ -112,10 +112,9 @@
   "subscriptionsPage.howItWorks3": "Zaplať objednávku",
   "subscriptionsPage.howItWorks4": "Vyčkej na email s prvním datem závozu",
   "subscriptionsPage.howItWorks5": "Pravidelně vyzvedávej",
-  "subscriptionsPage.noteHeading": "Poznámka (požadavky, zpětná vazba)",
-  "subscriptionsPage.note.placeholder.line1": "Frekvence odběru: jednou za 14 dní", 
-  "subscriptionsPage.note.placeholder.line2": "Oblíbená zelenina: paprika, rajče, mrkev, salát, okurka",
-  "subscriptionsPage.note.placeholder.line3": "Neoblíbená zelenina: kopr, cibule, brokolice",
+  "subscriptionsPage.noteHeading": "Poznámka (zpětná vazba)",
+  "subscriptionsPage.note.placeholder": "Například dej farmáři vědět jaká je tvoje oblíbená zelenina, aby věděl, čeho pěstovat více a čeho méně.\n\n\nOblíbená zelenina: paprika, rajče, mrkev, salát, okurka\n\nNeoblíbená zelenina: řapíkatý celer, kopr", 
+  "subscription.journal.placeholder": "Deník slouží tobě jako farmáři, pro zaznamenávání vývoje objednávky a měl jsi tak všechny informace při přípravě odběrů na jednom místě. Zákazník deník nevidí.\n\nPříklad použití:\n22.6.2021: První závoz\n29.6.2021: Druhý závoz\n6.7.2021: Třetí závoz\n13.7.2021: Zákazník požádal o odložení závozu kvůli dovolené\n20.7.2021: Čtvrtý závoz\n...\n14.9.2021: Poslední závoz - objednávka dokončena",
   "subscription.subscriptions.heading": "Předplatné",
   "subscriptionsPage.subscriptionContentHeading": "(Možný) obsah",
   "subscriptionsPage.subscriptionName": "Jméno předplatného",
