--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -23,7 +23,7 @@
   "subscriptionsPage.selectPickupPointHeading": "Select pickup point",
   "subscriptionsPage.selectSubscriptionHeading": "Select subscriptions",
   "aboutFarm": "About Farm",
-  "subscriptionsTable.numberOfDeliveriesHeading": "Quantity",
+  "subscriptionsTable.numberOfDeliveriesHeading": "Deliveries (pc)",
   "subscriptionsTable.priceHeading": "Price",
   "accommodation.heading": "Accommodation",
   "address": "Address",
@@ -47,7 +47,7 @@
   "farmPages.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
   "farmPages.switchToAdminMode": "Admin",
   "farmPages.switchToViewMode": "View", 
-  "farmPickupDayDefaultValue": "By agreement.",
+  "farmPickupDayDefaultValue": "By agreement",
   "farmsPage.deliversToHeading": "Pickup points in",
   "farmsPage.heading": "Find Farm",
   "farmsPage.producingLabel": "Producing",
@@ -56,7 +56,7 @@
   "genericFailureMessage": "Something's wrong. Please try again later.",
   "landingPage.contactDeveloper": "Or contact the developer",
   "landingPage.heading": "Local produce directly from a farm",
-  "landingPage.howItWorks1": "Find farm by pickup point",
+  "landingPage.howItWorks1": "Find farm",
   "landingPage.howItWorks2": "Select subscription",
   "landingPage.howItWorks3": "The more you prepay the more you save",
   "landingPage.howItWorks4": "Pick up regular deliveries",
@@ -75,7 +75,7 @@
   "phoneNumber": "Phone number",
   "photoGallery.heading": "Photo Gallery",
   "pickupDayLabel": "Pickup day",
-  "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm.",
+  "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm. Specify the frequency in the order note",
   "pickupPoint": "Pickup point",
   "pickupPoints": "Pickup Points",
   "pickupPointsPage.editDelete": "Edit/Delete",
@@ -104,7 +104,9 @@
   "somethingWentWrong": "Something went wrong",
   "subscriptionEditor.contentPlaceholder": "Various seasonal vegetables",
   "subscriptionEditor.heading": "Subscription Editor",
-  "subscriptionsPage.noteHeading": "Note", 
+  "subscriptionsPage.noteHeading": "Note (feedback)",
+  "subscriptionsPage.note.placeholder": "For example, you can let the farmer know, what are your favorite vegetables, so he knows, what to grow more of and less of.\n\n\nFavorite vegetables: tomatoes, carrots, lettuce, cucumbers\n\nDisliked vegetables: celery stalks, dill",
+  "subscription.journal.placeholder": "The journal serves you as a farmer to document the progress of the order. The point is to have all necessary information in one place when preparing the delivery. The customer cannot see the journal\n\nUsage example:\n6/22/2021: First delivery\n6/29/2021: Second delivery\n7/6/2021: Third delivery\n7/13/2021: Customer requested to postpone one delivery because of a vacation\n7/20/2021: Fourth delivery\n...\n9/14/2021: Last delivery - order completed",
   "subscriptionEditor.namePlaceholder": "Vegetables for 4",
   "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
   "subscriptionEditor.pricePerDelivery": "Price per delivery ({{currency}})",
