--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -41,7 +41,7 @@
   "eshop.heading": "Eshop",
   "exampleFarmAlert": "Tato farma není skutečná, jedná se o ilustraci.",
   "farm": "Farma",
-  "farmForm.isPickupPoint": "Odběry ze dvora",
+  "farmForm.isFarmPickupPoint": "Odběry ze dvora",
   "farmForm.makeFarmPublic": "Zveřejnit farmu",
   "farmName": "Jméno farmy",
   "farmPages.farmIsNotPublishedAlert": "Vaše farma není veřejně dostupná. Změnu lze provést v nastavení farmy.",
@@ -77,6 +77,7 @@
   "pickupDayLabel": "Odběrový den",
   "pickupDayPlaceholder": "Týdně/Ob týden ve čtvrtek od 10 do 16 hodin. Frekvenci uveďte v poznámce objednávky.",
   "pickupPoint": "Odběrové místo",
+  "pickupPoint.isFarmPickupPoint.name": "Odběr z farmy",
   "pickupPoints": "Odběrová Místa",
   "pickupPointsPage.editDelete": "Editovat/Smazat",
   "postcode": "PSČ",
