--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -41,7 +41,7 @@
   "eshop.heading": "Eshop",
   "exampleFarmAlert": "This farm is not real it's for illustrative purposes only.",
   "farm": "Farm",
-  "farmForm.isPickupPoint": "Use farm as pickup point",
+  "farmForm.isFarmPickupPoint": "Use farm as pickup point",
   "farmForm.makeFarmPublic": "Make farm public",
   "farmName": "Farm name",
   "farmPages.farmIsNotPublishedAlert": "Your farm is not publicly available. You can change it in farm settings.",
@@ -77,6 +77,7 @@
   "pickupDayLabel": "Pickup day",
   "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm. Specify the frequency in the order note",
   "pickupPoint": "Pickup point",
+  "pickupPoint.isFarmPickupPoint.name": "Pickup from farm",
   "pickupPoints": "Pickup Points",
   "pickupPointsPage.editDelete": "Edit/Delete",
   "postcode": "Postcode",
