--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -8,14 +8,13 @@
   "order.status.completed": "Dokončena",
   "order.orders.completed.heading": "Dokončené",
   "order.status.active": "Aktivní",
-  "subscriptionsTable.pricePerDelivery.heading": "Cena za odběr",
+  "subscriptionsTable.pricePerDelivery.heading": "Cena za závoz",
   "customer": "Zákazník",
   "note": "Poznámka",
   "dateOfCreation": "Datum vytvoření",
   "orderId": "Id objednávky",
   "ok": "Ok",
-  "subscriptionsPage.submit.success.text": "Objednávka byla úspěšně odeslána farmáři a na tvůj email.",
-  "subscriptionsPage.submit.success.nextSteps": "Další kroky:",
+  "subscriptionsPage.submit.success.text": "Objednávka byla úspěšně odeslána farmáři",
   "subscriptionsPage.submit.button": "Odeslat objednávku",
   "subscriptionsPage.customerData.heading": "Kontaktní údaje",
   "fullname": "Jméno a příjmení",
@@ -24,7 +23,7 @@
   "subscriptionsPage.selectSubscriptionHeading": "Vyber předplatné",
   "aboutFarm": "O Farmě",
   "subscriptionsTable.priceHeading": "Price",
-  "subscriptionsTable.numberOfDeliveriesHeading": "Počet odběrů (ks)",
+  "subscriptionsTable.numberOfDeliveriesHeading": "Počet závozů (ks)",
   "accommodation.heading": "Ubytování",
   "address": "Adresa",
   "addressLevel1Label": "Okres", 
@@ -104,10 +103,10 @@
   "signUpPage.newsletterCheckbox": "Chci novinky od FarmedBy na email.",
   "somethingWentWrong": "Něco se porouchalo",
   "subscriptionEditor.contentPlaceholder": "Různá sezonní zelenina",
-  "subscriptionEditor.heading": "Editor Odběru",
+  "subscriptionEditor.heading": "Editor předplatného",
   "subscriptionEditor.namePlaceholder": "Velká zeleninová bedýnka",
-  "subscriptionEditor.numberOfDeliveries": "Od počtu odběrů",
-  "subscriptionEditor.pricePerDelivery": "Cena za odběr ({{currency}})",
+  "subscriptionEditor.numberOfDeliveries": "Od počtu závozů",
+  "subscriptionEditor.pricePerDelivery": "Cena za závoz ({{currency}})",
   "subscriptionsPage.howItWorks1": "Níže vytvoř objednávku",
   "subscriptionsPage.howItWorks2": "Vyčkej na email od farmáře s platebními údaji",
   "subscriptionsPage.howItWorks3": "Zaplať objednávku",
