--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -14,8 +14,7 @@
   "dateOfCreation": "Date of creation",
   "orderId" : "Order id",
   "ok": "Ok",
-  "subscriptionsPage.submit.success.text": "The order has been successfully sent to the farmer and to your email.",
-  "subscriptionsPage.submit.success.nextSteps": "Next steps:",
+  "subscriptionsPage.submit.success.text": "The order has been successfully sent to the farmer",
   "subscriptionsPage.customerData.heading": "Contact information",
   "subscriptionsPage.submit.button": "Create order",
   "fullname": "Fullname",
@@ -104,7 +103,7 @@
   "signUpPage.newsletterCheckbox": "Subscribe to FarmedBy newsletter",
   "somethingWentWrong": "Something went wrong",
   "subscriptionEditor.contentPlaceholder": "Various seasonal vegetables",
-  "subscriptionEditor.heading": "Subscription Editor",
+  "subscriptionEditor.heading": "Subscription editor",
   "subscriptionsPage.noteHeading": "Note (feedback)",
   "subscriptionsPage.note.placeholder": "For example, you can let the farmer know, what are your favorite vegetables, so he knows, what to grow more of and less of.\n\n\nFavorite vegetables: tomatoes, carrots, lettuce, cucumbers\n\nDisliked vegetables: celery stalks, dill",
   "subscription.journal.placeholder": "The journal serves you as a farmer to document the progress of the order. The point is to have all necessary information in one place when preparing the delivery. The customer cannot see the journal\n\nUsage example:\n6/22/2021: First delivery\n6/29/2021: Second delivery\n7/6/2021: Third delivery\n7/13/2021: Customer requested to postpone one delivery because of a vacation\n7/20/2021: Fourth delivery\n...\n9/14/2021: Last delivery - order completed",
@@ -112,9 +111,9 @@
   "subscriptionEditor.numberOfDeliveries": "From number of deliveries",
   "subscriptionEditor.pricePerDelivery": "Price per delivery ({{currency}})",
   "subscriptionsPage.howItWorks1": "Create an order below",
-  "subscriptionsPage.howItWorks2": "Wait for an email from the farmer with payment information",
-  "subscriptionsPage.howItWorks3": "Pay for the order",
-  "subscriptionsPage.howItWorks4": "Wait for an email with first delivery day",
+  "subscriptionsPage.howItWorks2": "Wait for an email from the farmer with payment details",
+  "subscriptionsPage.howItWorks3": "Make the payment",
+  "subscriptionsPage.howItWorks4": "Wait for an email containing first delivery date",
   "subscriptionsPage.howItWorks5": "Pick up regular deliveries",
   "subscription.subscriptions.heading": "Subscriptions",
   "subscriptionsPage.subscriptionContentHeading": "(Possible) content",
