adding empty states

--- a/src/i18n/locales/cs.json
+++ b/src/i18n/locales/cs.json
@@ -70,6 +70,10 @@
   "orders": "Objednávky",
   "orderPage.heading": "Objednávka #{{orderId}}",
   "password": "Heslo",
+  "pickupPoint.empty.text": "Tato farma zatím nemá žádná odběrová místa",
+  "subscription.empty.text": "Tato farma zatím nemá žádné předplatné",
+  "subscription.calculator.text": "Kontaktuj farmáře, pro vytvoření objednávky",
+  "subscription.calculator.heading": "Kalkulátor cen",
   "pc": "ks",
   "phoneNumber": "Telefonní číslo",
   "photoGallery.heading": "Fotogalerie",
