--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -73,6 +73,10 @@
   "pc": "pc",
   "phoneNumber": "Phone number",
   "photoGallery.heading": "Photo Gallery",
+  "pickupPoint.empty.text": "This farm hasn't got any pickup point yet",
+  "subscription.empty.text": "This farm hasn't got any subscriptions yet",
+  "subscription.calculator.text": "Contact the farmer to place an order",
+  "subscription.calculator.heading": "Price calculator",
   "pickupDayLabel": "Pickup day",
   "pickupDayPlaceholder": "Weekly/Biweekly on Wednesday from 10am to 4pm. Specify the frequency in the order note",
   "pickupPoint": "Pickup point",
